--- a/One-Page-Website/CSS/one_page_website.css
+++ b/One-Page-Website/CSS/one_page_website.css
@@ -1,6 +1,115 @@
 body {
     font-family: Poppins, sans-serif;
+    font-size: 22px;
+    color: #dfdce3;
+    margin: 0;
+    background-color: #4abdac;
+    text-align: center;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: coral;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    font-weight: bold;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #4abdac;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
     font-size: 20px;
+}
+
+.navbar a:hover {
+    background: #ddd;
+    color: black;
+}
+
+ul {
+    list-style-type: none;
+}
+
+#home {
+    margin-top: 100px;
+}
+
+#home h1 {
+    font-family: "Abril Fatface", sans-serif;
+}
+
+#home p:hover {
+    background-color: coral;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: #dfdce3;
+}
+
+img {
+    filter: drop-shadow(8px 8px 10px #fc4a1a);
+    border-radius: 5px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.top-left {
+    position: absolute;
+    top: 15px;
+    left: 300px;
+}
+
+table {
+    /*center table*/
+}
+
+table, th, td {
+    border: 1px solid #dfdce3;
+
+}
+
+th, td {
+    padding: 15px;
+}
+
+th {
+    background-color: coral;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 250px;
+    color: #dfdce3;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 form input[type=text] {
@@ -9,4 +118,56 @@ form input[type=text] {
     border: 2px solid #4abdac;
     border-radius: 4px;
     color: darkslategray;
+}
+
+footer {
+    text-align: center;
+    font-weight: bold;
+    line-height: 8px;
+}
+
+.overlay-container {
+    position: relative;
+    width: 100%;
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 50%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.overlay-container:hover .image {
+    opacity: 0.3;
+}
+
+.overlay-container:hover .middle {
+    opacity: 1;
+}
+
+.text {
+    background-color: #04aa6d;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+.video {
+    position: absolute;
+    top: 60px;
+    left: 300px;
 }
