--- a/One-Page-Website/CSS/one_page_website.css
+++ b/One-Page-Website/CSS/one_page_website.css
@@ -7,6 +7,9 @@ body {
     text-align: center;
 }
 
+* {
+    box-sizing: border-box;
+}
 .navbar {
     overflow: hidden;
     background-color: coral;
@@ -48,37 +51,146 @@ ul {
     background-color: coral;
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+.row > .column {
+  padding: 0 8px;
 }
 
-.container {
-    position: relative;
-    text-align: center;
-    color: #dfdce3;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #99d7ce;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: #ddd;
+  position: absolute;
+  top: 80px;
+  right: 75px;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
 img {
-    filter: drop-shadow(8px 8px 10px #fc4a1a);
-    border-radius: 5px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  margin-bottom: -4px;
 }
 
-.top-left {
-    position: absolute;
-    top: 15px;
-    left: 300px;
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 table {
     /*center table*/
+    margin-left: auto;
+    margin-right: auto;
 }
 
 table, th, td {
@@ -98,7 +210,7 @@ th {
     box-sizing: border-box;
 }
 
-.column {
+.table_column {
     float: left;
     width: 50%;
     padding: 10px;
@@ -126,44 +238,17 @@ footer {
     line-height: 8px;
 }
 
-.overlay-container {
-    position: relative;
-    width: 100%;
-}
-
-.image {
-    opacity: 1;
-    display: block;
-    width: 50%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-}
-
-.middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.overlay-container:hover .image {
-    opacity: 0.3;
-}
-
-.overlay-container:hover .middle {
-    opacity: 1;
-}
-
 .text {
     background-color: #04aa6d;
     color: white;
     font-size: 16px;
     padding: 16px 32px;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: #dfdce3;
 }
 
 .video {
