--- a/One-Page-Website/CSS/one_page_website.css
+++ b/One-Page-Website/CSS/one_page_website.css
@@ -1,6 +1,6 @@
 body {
     font-family: Poppins, sans-serif;
-    font-size: 22px;
+    font-size: 1.5vw;
     color: #dfdce3;
     margin: 0;
     background-color: #4abdac;
@@ -27,7 +27,7 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 
 .navbar a:hover {
