--- a/Website_Project/CSS/animations.css
+++ b/Website_Project/CSS/animations.css
@@ -37,6 +37,16 @@
 /*---------------------------------------------------------------------
     GALLERY SECTION ANIMATION
 ---------------------------------------------------------------------*/
+
+body {
+    opacity: 1;
+    transition: 1s opacity;
+}
+
+body.fade-out {
+    opacity: 0;
+    transition: none;
+}
 .photo {
     position: relative;
     line-height: 0;
